--- a/0x15-file_io/.vscode/settings.json
+++ b/0x15-file_io/.vscode/settings.json
@@ -36,6 +36,7 @@
 	"C_Cpp_Runner.useAddressSanitizer": false,
 	"C_Cpp_Runner.showCompilationTime": false,
 	"files.associations": {
-		"stdlib.h": "c"
+		"stdlib.h": "c",
+		"stdio.h": "c"
 	}
 }
