--- a/0x15-file_io/.vscode/settings.json
+++ b/0x15-file_io/.vscode/settings.json
@@ -37,6 +37,7 @@
 	"C_Cpp_Runner.showCompilationTime": false,
 	"files.associations": {
 		"stdlib.h": "c",
-		"stdio.h": "c"
+		"stdio.h": "c",
+		"stat.h": "c"
 	}
 }
